# HHS-Computer-Vision

./: CMakeLists.txt  README.md
Assignment/: CMakeLists.txt  Filtering.cpp  Filtering.h  Gaps.cpp  Gaps.h  GapsNext.cpp  GapsNext.h  Histogram.cpp  Histogram.h  Invert.cpp  Invert.h  Mier.cpp  Mier.h  Mirror.cpp  Mirror.h  Parameters.h  SmartContrast.cpp  SmartContrast.h  Zoom.cpp  Zoom.h  h-nse-imvis.cpp
Example/: CMakeLists.txt  main.cpp
Practicumhandleiding/: 1920 H-NSE-IMVIS Practicumhandleiding.md
assets/: Donker.pgm  Rijswijk.pgm  ants1.pgm  ants1_bw.pgm  ants2.pgm  ants2_bw.pgm  ants2_bw.tif  chassis1.pgm  chassis2.pgm  image1.pgm
